--- a/src/app/components/admin/tenant-form-dialog/tenant-form-dialog.component.html
+++ b/src/app/components/admin/tenant-form-dialog/tenant-form-dialog.component.html
@@ -4,7 +4,7 @@
   <mat-dialog-content>
     <!-- Error Message -->
     <mat-error *ngIf="error" class="error-banner">
-      <mat-icon>error</mat-icon>
+      <mat-icon>error_outline</mat-icon>
       {{ error }}
     </mat-error>
 
