--- a/src/app/components/dashboard-navigation/dashboard-navigation.component.html
+++ b/src/app/components/dashboard-navigation/dashboard-navigation.component.html
@@ -65,6 +65,10 @@
         <mat-icon>map</mat-icon>
         <span>Ubicación</span>
       </button>
+      <button mat-menu-item routerLink="/dashboard/admin/my-billing">
+        <mat-icon>receipt_long</mat-icon>
+        <span>Mis Facturas</span>
+      </button>
     </mat-menu>
 
     <button mat-menu-item [matMenuTriggerFor]="menu2">
